--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!doctype html>
 
 <html lang="en">
+  
 <head>
   <meta charset="utf-8">
-  <title>{OleFarts} CSGO</title>
+  <title>{OleFarts}</title>
+  <style>
+    .center {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 50%;
+    }
+  </style>
 </head>
 
 <body>
-  <h1>{OleFarts}</h1>
+  <img src="olefarts_logo_sq.png" alt="{OleFarts} est. 2002" class="center">
 </body>
+  
 </html>
