--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
   <title>{OleFarts}</title>
   <style>
     .center {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width: 50%;
+       width: 300px;
+       height: 300px;
+       position: absolute;
+       left: 50%;
+       top: 50%; 
+       margin-left: -150px;
+       margin-top: -150px;
     }
   </style>
 </head>
 
 <body>
+  <body bgcolor="#1a1a1a">
   <img src="olefarts_logo_sq.png" alt="{OleFarts} est. 2002" class="center">
 </body>
   
